--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -4,3 +4,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/dbtest
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.liquibase.change-log=classpath:db/changelog/changelog.xml
+
+StaffService.STAFF_NOT_FOUND=No staff found with given id.
+
+ProjectService.PROJECT_NOT_FOUND=No project found with given id.
+
+StaffProjectService.STAFF_PROJECT_NOT_FOUND=No staff-project found with given id.
