write test for controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 spring.liquibase.change-log=classpath:db/changelog/changelog.xml
 
+General.EXCEPTION_MESSAGE=Internal Server Error.
+
 StaffService.STAFF_NOT_FOUND=No staff found with given id.
 
 ProjectService.PROJECT_NOT_FOUND=No project found with given id.
