--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,2 +1,2 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/dbtest
-spring.liquibase.change-log=classpath:db/changelog/changelog-test.xml
+#spring.liquibase.change-log=classpath:db/changelog/changelog-test.xml
