--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/liquibase_test
 spring.datasource.username=postgres
 spring.datasource.password=password
-#spring.liquibase.change-log=classpath:db/changelog/changelog.xml
+spring.liquibase.change-log=classpath:db/changelog/changelog.xml
 
 General.EXCEPTION_MESSAGE=Internal Server Error.
 
