--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Staff - Project Demo</description>
 	<properties>
 		<java.version>17</java.version>
+		<spring.profiles.active>local,no-liquibase</spring.profiles.active>
 	</properties>
 	<dependencies>
 		<dependency>
