--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-#version: '3.8'            # Version 3.8 is quite new and should work
+version: '3.0'            # Version 3.8 is quite new and should work
 
 services:
   db:
