--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.7'            # Version 3.8 is quite new and should work
 services:
   db:
     image: postgres
+    build: .
     restart: always
     container_name: db
     ports:
