--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
   app:                    # The name of the service, can be anything
     image: staff-project  # Declares which image to use
     build: .              # Declares where to build if image is not found
+    container_name: staff-project
     ports:                # Declares the ports to publish
       - "8080:8080"
     depends_on:
