spring security keycloak

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,17 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 spring.liquibase.change-log=classpath:db/changelog/changelog.xml
 
+# Keycloak
+keycloak.auth-server-url=http://localhost:9080/auth
+keycloak.realm=SpringBootKeycloak
+keycloak.resource=login-app
+keycloak.public-client=true
+#keycloak.bearer-only=true
+
+#keycloak.security-constraints[0].authRoles[0]=user
+#keycloak.security-constraints[0].securityCollections[0].patterns[0]=/staffs/*
+#keycloak.principal-attribute=preferred_username
+
 General.EXCEPTION_MESSAGE=Internal Server Error.
 
 StaffService.STAFF_NOT_FOUND=No staff found with given id.
