--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,35 @@
 version: '3.7'            # Version 3.8 is quite new and should work
 
 services:
+  db_keycloak:
+    image: postgres:11
+    container_name: db_keycloak
+#    volumes:
+#      - ./db-data:/var/lib/postgresql/datavolumes:
+#      - ./db-data:/var/lib/postgresql/data
+#    ports:
+#      - "5433:5432"
+    environment:
+      POSTGRES_DB: keycloak
+      POSTGRES_USERNAME: postgres
+      POSTGRES_PASSWORD: password
+
+  keycloak:
+    image: jboss/keycloak
+    container_name: keycloak
+    environment:
+      DB_VENDOR: POSTGRES
+      DB_ADDR: db_keycloak
+      DB_DATABASE: keycloak
+      DB_USER: postgres
+      DB_PASSWORD: password
+      KEYCLOAK_USER: admin
+      KEYCLOAK_PASSWORD: password
+    ports:
+      - "9080:8080"
+    depends_on:
+      - db_keycloak
+
   db:
     image: postgres
     restart: always
@@ -20,7 +49,9 @@ services:
       - "8080:8080"
     depends_on:
       - db
+      - keycloak
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/liquibase_test
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=password
+      - KEYCLOAK_AUTH-SERVER-URL=http://localhost:9080/auth
