--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
                     echo props['prop1']
                 }
 
-//                 sh "docker-compose -f docker-compose.test.yml up --build --exit-code-from app"
+                sh "docker-compose -f docker-compose.test.yml up --build --exit-code-from app"
                 sh "docker-compose -f docker-compose.test.yml down"
             }
         }
