--- a/Jenkins/docker-compose.jenkins.yml
+++ b/Jenkins/docker-compose.jenkins.yml
@@ -28,7 +28,7 @@ services:
     depends_on:
       - docker-dind
     environment:
-      DOCKER_HOST: tcp://docker-dind:2376
+      DOCKER_HOST: tcp://743a615e9042:2376
       DOCKER_CERT_PATH: /certs/client
       DOCKER_TLS_VERIFY: 1
     networks:
