--- a/Jenkins/docker-compose.jenkins.yml
+++ b/Jenkins/docker-compose.jenkins.yml
@@ -12,7 +12,9 @@ services:
       DOCKER_TLS_CERTDIR: /certs
     privileged: true
     networks:
-      - jenkins-network
+      jenkins-network:
+        aliases:
+          - docker
 
   jenkins-docker:
     image: jenkins-docker
@@ -26,11 +28,11 @@ services:
     ports:
       - "7080:8080"
     environment:
-      DOCKER_HOST: tcp://743a615e9042:2376
+      DOCKER_HOST: tcp://docker:2376
       DOCKER_CERT_PATH: /certs/client
       DOCKER_TLS_VERIFY: 1
     networks:
-      - jenkins-network
+      jenkins-network:
 
 volumes:
   jenkins-data:
