--- a/Jenkins/docker-compose.jenkins.yml
+++ b/Jenkins/docker-compose.jenkins.yml
@@ -13,8 +13,8 @@ services:
     privileged: true
     networks:
       jenkins-network:
-        aliases:
-          - docker-dind
+#        aliases:
+#          - docker-dind
 
   jenkins-docker:
     image: jenkins-docker
@@ -28,7 +28,7 @@ services:
     ports:
       - "7080:8080"
     environment:
-      DOCKER_HOST: tcp://docker-dind:2376
+      DOCKER_HOST: tcp://docker:2376
       DOCKER_CERT_PATH: /certs/client
       DOCKER_TLS_VERIFY: 1
     networks:
