--- a/Jenkins/docker-compose.jenkins.yml
+++ b/Jenkins/docker-compose.jenkins.yml
@@ -14,7 +14,7 @@ services:
     networks:
       jenkins-network:
         aliases:
-          - docker-dind-alias
+          - dockerdindalias
 
   jenkins-docker:
     image: jenkins-docker
@@ -28,7 +28,7 @@ services:
     ports:
       - "7080:8080"
     environment:
-      DOCKER_HOST: tcp://docker-dind-alias:2376
+      DOCKER_HOST: tcp://dockerdindalias:2376
       DOCKER_CERT_PATH: /certs/client
       DOCKER_TLS_VERIFY: 1
     networks:
