--- a/Jenkins/docker-compose.jenkins.yml
+++ b/Jenkins/docker-compose.jenkins.yml
@@ -13,8 +13,8 @@ services:
     privileged: true
     networks:
       jenkins-network:
-        aliases:
-          - dockerdindalias
+#        aliases:
+#          - dockerdindalias
 
   jenkins-docker:
     image: jenkins-docker
@@ -27,10 +27,8 @@ services:
       - jenkins-docker-certs:/certs/client:ro
     ports:
       - "7080:8080"
-    depends_on:
-      - docker-dind
     environment:
-      DOCKER_HOST: tcp://dockerdindalias:2376
+      DOCKER_HOST: tcp://docker:2376
       DOCKER_CERT_PATH: /certs/client
       DOCKER_TLS_VERIFY: 1
     networks:
