--- a/Jenkins/JenkinsTest/DockerfileTest
+++ b/Jenkins/JenkinsTest/DockerfileTest
@@ -2,11 +2,11 @@ FROM openjdk:17
 
 WORKDIR /app
 
-COPY ../../.mvn .mvn
-COPY ../../mvnw pom.xml ./
+COPY .mvn .mvn
+COPY mvnw pom.xml ./
 RUN chmod +x mvnw
 #RUN ./mvnw dependency:go-offline
 
-COPY ../../src ./src
+COPY src ./src
 
 CMD ["./mvnw", "test"]
