--- a/Jenkins/JenkinsTest/docker-compose.test.yml
+++ b/Jenkins/JenkinsTest/docker-compose.test.yml
@@ -4,7 +4,7 @@ services:
   db_test:
     image: postgres
     restart: always
-    container_name: db-test
+    container_name: db_test
     environment:
       POSTGRES_DB: dbtest
       POSTGRES_USERNAME: postgres
@@ -15,7 +15,7 @@ services:
     build:
       context: .
       dockerfile: DockerfileTest
-    container_name: staff-project-test
+    container_name: staff_project_test
     ports:
       - "8082:8080"
     depends_on:
