--- a/Jenkins/JenkinsTest/DockerfileTest
+++ b/Jenkins/JenkinsTest/DockerfileTest
@@ -2,7 +2,7 @@ FROM openjdk:17
 
 WORKDIR /app
 
-COPY .mvn/ .mvn
+COPY ../../.mvn/ .mvn
 COPY mvnw pom.xml ./
 RUN chmod +x mvnw
 #RUN ./mvnw dependency:go-offline
