--- a/Jenkins/JenkinsTest/docker-compose.test.yml
+++ b/Jenkins/JenkinsTest/docker-compose.test.yml
@@ -13,8 +13,8 @@ services:
   app:
     image: staff-project-test
     build:
-      context: .
-      dockerfile: DockerfileTest
+      context: ../..
+      dockerfile: Jenkins/JenkinsTest/DockerfileTest
     container_name: staff_project_test
     ports:
       - "8082:8080"
