--- a/Keycloak/Dockerfile
+++ b/Keycloak/Dockerfile
@@ -7,6 +7,6 @@ COPY mvnw pom.xml ./
 RUN chmod +x mvnw
 RUN ./mvnw dependency:go-offline
 
-COPY backend backend
+COPY src src
 
 CMD ["./mvnw", "spring-boot:run"]
