--- a/Jenkins/JenkinsTest/DockerfileTest
+++ b/Jenkins/JenkinsTest/DockerfileTest
@@ -5,7 +5,7 @@ WORKDIR /app
 COPY .mvn .mvn
 COPY mvnw pom.xml ./
 RUN chmod +x mvnw
-RUN ./mvnw dependency:resolve
+RUN ./mvnw dependency:resolve-plugins
 
 COPY src src
 
